--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
       <div id="exercisecontainer">
           <h2>Exercise GitOps</h2>
-              <p>Homework Assignment 3: Continuous Deployment with GitHub Actions (Optional)</p>
+              <p>Homework Assignment: Continuous Deployment with GitHub Actions (Optional)</p>
               <ol>
                   <li>Choose a static website or a simple web application project.</li>
                   <li>Create a GitHub repository for your project.</li>
